# layered-architecture

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yml  pyproject.toml
docs/: notes.md  presentation.md
docs/diagrams/source/: dependency_inversion_principle_after.mmd  dependency_inversion_principle_before.mmd  high_level_architecture.mmd  testing_strategy.mmd
src/layered_architecture/: enums.py  exceptions.py  main.py
src/layered_architecture/api/handlers/: __init__.py  error.py  logging.py  middlewares.py  routers.py
src/layered_architecture/api/routers/: api_router.py
src/layered_architecture/api/routers/v1/: __init__.py  orders.py
src/layered_architecture/commands/: cancel_pending_orders.py
src/layered_architecture/config/: settings.py
src/layered_architecture/dao/: __init__.py
src/layered_architecture/dao/concrete/: __init__.py  sqla_beer.py  sqla_order.py  sqla_pizza.py
src/layered_architecture/dao/interfaces/: __init__.py  beer.py  order.py  pizza.py
src/layered_architecture/db/: depends.py  session.py
src/layered_architecture/db/alembic/: alembic.ini  env.py
src/layered_architecture/db/alembic/versions/: 216322cca0a8_0001_initial.py  43499b887dfc_add_pizzas_and_beers.py  51e9f9225413_create_initial_migration.py  99f1ebf9bf4c_.py
src/layered_architecture/db/models/: __init__.py  base.py  beer.py  order.py  order_beer.py  order_pizza.py  pizza.py
src/layered_architecture/db/models/mixins/: __init__.py  created_at.py  deleted_at.py  updated_at.py  uuid_id.py
src/layered_architecture/db/uow/: __init__.py  base.py  sqla.py
src/layered_architecture/dto/: __init__.py  base.py  beer.py  error.py  health.py  order.py  pizza.py  user.py
src/layered_architecture/factories/: __init__.py  order.py
src/layered_architecture/services/: __init__.py  dependency.py
src/layered_architecture/services/concrete/: __init__.py  base_order.py  corporate.py  delivery.py  dine_in.py  downtown.py  fake_auth.py  late_night.py  mall.py  takeaway.py
src/layered_architecture/services/interfaces/: __init__.py  auth.py  order.py
src/layered_architecture/tests/: conftest.py
src/layered_architecture/tests/system/: test_orders.py
tests/: conftest.py
tests/integration/: test_sqla_beer.py  test_sqla_order.py  test_sqla_pizza.py
tests/unit/: conftest.py
tests/unit/services/: test_delivery.py  test_dine_in.py  test_late_night.py  test_takeaway.py
